--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <html>
   
   <body>
-    <img src="WhatsApp Image 2022-01-11 at 08.54.03.jpeg">
+    <img src="WhatsApp Image 2022-01-11 at 08.54.03.jpeg" width="200" height="200">
   
     <h2>Ganesh Datt Joshi</h2>
     
-    <ui>
+    <ul>
       <li> W1D1 - This home page</li>
       <li> W1D2 - About Me</li>
       <li> W1D3 - Receipe</li>
       <li> W1D4 - Movie Review</li>
       <li> W1D5 - MP3 Library</li>
       <li> W1D6 - Movie Review PHP</li>
-    </ui>
+    </ul>
   
   </body>
   
