--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-
+<!DOCTYPE html>
 
 <html>
   
+  <head>
+    <title>My Personal Info Page</title>
+  </head>
+  
   <body>
-    <img src="WhatsApp Image 2022-01-11 at 08.54.03.jpeg" width="200" height="200">
+    <img src="WhatsApp Image 2022-01-11 at 08.54.03.jpeg" width="200" height="200" alt="Ganesh Datt Joshi"/>
   
     <h2>Ganesh Datt Joshi</h2>
     
