--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-
 <html>
-  
-  <head>
-    <title>My Personal Info Page</title>
-  </head>
-  
+
+<head>
+	<title>My Page</title>
+	<meta charset="utf-8"  />
+</head>  
   <body>
     <img src="WhatsApp Image 2022-01-11 at 08.54.03.jpeg" width="200" height="200" alt="Ganesh Datt Joshi"/>
   
