--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     
     <ul>
       <li> W1D1 - This home page</li>
-      <li> W1D2 - About Me</li>
-      <li> W1D3 - Receipe</li>
+      <li> <a href="aboutme.html"> W1D2 - About Me</a></li>
+      <li> <a href="pie.html">W1D3 - Receipe</a> </li>
       <li> W1D4 - Movie Review</li>
       <li> W1D5 - MP3 Library</li>
       <li> W1D6 - Movie Review PHP</li>
