--- a/aboutme.html
+++ b/aboutme.html
@@ -13,57 +13,134 @@
  
 <hr/>
 
-  <h2>My Favorite Yoga </h2>
+  <h2>My Classes </h2>
  <ul>
-      <li>Anulom Bilom</li>
-      <li>Surya Namaskar</li>
-      <li>Varshikha</li>
+      <li>CS472	Web Programming	</li>
+      <li>STC Pt2 Leadership for Tech Managers</li>
+      <li>CS590	Software Architecture</li>
+      <li>CS544	Enterprise Architecture</li>
    </ul>   
 
-   <h2>My Favorite Places</h2>
-   <ol>
+   <h2>My Favorite Movie</h2>
+   <ol reversed>
     <li>
-      <strong>Kathmandu</strong> 
+      <strong>Pushpa: The Rise - Part 1</strong> (<a
+        href="https://www.imdb.com/title/tt9389998/?ref_=hm_tpks_tt_i_1_pd_tp1_cp"
+        target="_blank"
+        >IMDB</a
+      >)
       <dl>
-        <dt>Wiki</dt>
+        <dt>Writer</dt>
         <dd>
-          <a href="https://en.wikipedia.org/wiki/Nepal"
-            >Nepal</a
+          <a href="https://www.imdb.com/name/nm1335875/?ref_=tt_ov_wr"
+            >Sukumar</a
           >
         </dd>
-        <dt>Country</dt>
-        <dd>Nepal</dd>
-        <dt>Food</dt>
-        <dd>Veg/Non-Veg</dd>
-        <dt>Tourist Area</dt>
+        <dt>Genre</dt>
+        <dd>Animation, Action, Adventure, Comedy, Drama, Fantasy</dd>
+        <dt>Tagline</dt>
+        <dd></dd>
+        <dt>Plot Outline</dt>
         <dd>
-          Thamel, Basantapur
+            Story of Pushpa Raj, a lorry driver in Seshachalam forests of South India, 
+            set in the backdrop of red sandalwood smuggling. Red Sandalwood is endemic to South-Eastern Ghats (mountain range) of India.
         </dd>
       </dl>
     </li>
-    <li>
-        <strong>Dubai</strong> 
-        <dl>
-          <dt>Wiki</dt>
-          <dd>
-            <a href="https://en.wikipedia.org/wiki/Dubai"
-              >Dubai</a
-            >
-          </dd>
-          <dt>Country</dt>
-          <dd>UAE</dd>
-          <dt>Food</dt>
-          <dd>Veg/Non-Veg</dd>
-          <dt>Tourist Area</dt>
-          <dd>
-            Jabel Beach, Bur Dubai
-          </dd>
-        </dl>
-      </li>
-   </ol>
 
-<a href="http://jigsaw.w3.org/css-validator/check/referer">
-    <img src="http://www.w3.org/Icons/valid-xhtml10" alt="css validator"/>
-</a>
+    <li>
+      <strong>Lost</strong> (<a
+        href="https://www.imdb.com/title/tt0411008/?ref_=hm_stp_fdv_tt_i_4"
+        target="_blank"
+        >IMDB</a
+      >)
+      <dl>
+        <dt>Writer</dt>
+        <dd>
+          <a href="https://en.wikipedia.org/wiki/Masashi_Kishimoto"
+            >Masashi Kishimoto</a
+          >
+        </dd>
+        <dt>Genre</dt>
+        <dd>Adventure, Drama, Fantasy</dd>
+        <dt>Tagline</dt>
+        <dd>They're not the survivors they think they are. (Season Two)</dd>
+        <dt>Plot Outline</dt>
+        <dd>
+            The past, present, and future lives of surviving Oceanic Flight 815 passengers are dramatically intertwined
+            as a fight for survival ensues in a quest for answers after crashlanding on a mysterious island.
+            Each discovery prompts yet more secrets, as the hastily-formed colony search for a way off the island, or is this their home
+        </dd>
+      </dl>
+    </li>
+
+    <li>
+      <strong>Death Note</strong> (<a
+        href="https://www.imdb.com/title/tt0877057/?ref_=nv_sr_srsg_0"
+        target="_blank"
+        >IMDB</a
+      >)
+      <dl>
+        <dt>Writer</dt>
+        <dd>
+          <a href="https://en.wikipedia.org/wiki/Tsugumi_Ohba"
+            >Tsugumi Ohba</a
+          >
+        </dd>
+        <dt>Genre</dt>
+        <dd>Animation, Crime, Drama, Fantasy, Mystery, Thriller</dd>
+        <dt>Tagline</dt>
+        <dd>Take down Yotsuba</dd>
+        <dt>Plot Outline</dt>
+        <dd>
+          After an intelligent yet cynical high school student begins to
+          cleanse the world from evil with the help of a magical notebook that
+          can kill anyone whose name is written on it, international
+          authorities call upon a mysterious detective known as "L" to thwart
+          his efforts.
+        </dd>
+      </dl>
+    </li>
+  </ol>
+
+  <br />
+    <h2>My Moods</h2>
+    <div class="row">
+      <div class="column">
+        <span>Happy</span><br />
+        <br />
+        <img
+          src="./images/happy.jpeg"
+          alt="photo profile"
+          width="300"
+          height="250"
+        />
+      </div>
+      <div class="column">
+        <span>Sad</span><br />
+        <br />
+        <img
+          src="./images/sad.jpeg"
+          alt="photo profile"
+          width="300"
+          height="250"
+        />
+      </div>
+    </div>
+
+    <br/><br/>
+
+    <h2>Fun facts about my neighbors</h2>
+    <ul style="list-style-type: square">
+      <li>Srikrishna Ban : Cool</li>
+      <li>Kamal Ale : Chill Guy</li>
+    </ul>
+
+    <br /><br />
+
+    <a
+    href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
+    <a
+    href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-css.png" alt="html validator"/></a>
 </body>
 </html>
