--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li> W1D1 - This home page</li>
       <li> <a href="aboutme.html"> W1D2 - About Me</a></li>
       <li> <a href="pie.html">W1D3 - Receipe</a> </li>
-      <li> W1D4 - Movie Review</li>
+      <li><a href="review/tmnt.html"> W1D4 - Movie Review</a></li>
       <li> W1D5 - MP3 Library</li>
       <li> W1D6 - Movie Review PHP</li>
     </ul>
