--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
   <a
 href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
   </body>
-	
-	
-	
+
+<p>Assignment Wednesday</p>
+
+<a href="module-closure-lab/banking-account.html"> Bank Account</a>
+<a href="module-closure-lab/rudy-timer.html"> Rudy timer</a>
+<a href="javascript-scope-excersize/answer.txt"> Scope Answer</a>
+<a href="homework8/ascii.html"> ASCII</a>
+
   
 </html>
