--- a/homework8/ascii.html
+++ b/homework8/ascii.html
@@ -56,7 +56,7 @@
                 src="http://mumstudents.org/cs472/2014-09/images/w3c-css.png" alt="html validator"/></a>
 
         <a href="https://webster.cs.washington.edu/jslint/?referer">
-            <img src="https://webster.cs.washington.edu/w3c-js.png" alt="Valid JS"/>
+            <img src="http://mumstudents.org/cs472/2014-09/images/w3c-js.png" alt="Valid JS"/>
         </a>
     </div>
 </div>
