--- a/banking-account.html
+++ b/banking-account.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Banking Account</title>
-    <script src="banking-account.js"></script>
-    <link rel="stylesheet" href="banking-account.css">
+    <script src="js/banking-account.js"></script>
+    <link rel="stylesheet" href="css/banking-account.css">
 </head>
 <body>
 
