--- a/grade.html
+++ b/grade.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Retrieve Grade</title>
-    <link rel="stylesheet" href="grade.css">
+    <link rel="stylesheet" href="css/grade.css">
 </head>
 <body>
 <form action="http://mumstudents.org/params.php" method="post">
