--- a/tmnt.html
+++ b/tmnt.html
@@ -6,12 +6,12 @@
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="movie.css" type="text/css" rel="stylesheet"/>
+    <link href="css/movie.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
 <div class="banner">
-    <img src="banner.png" alt="Rancid Tomatoes"/>
+    <img src="img/banner.png" alt="Rancid Tomatoes"/>
 </div>
 <br/>
 <div class="">
@@ -19,32 +19,32 @@
     <div class="container">
         <div class="container-left">
             <div class="rotten">
-                <img src="rottenbig.png" alt="Rotten" style="float: left"/>
+                <img src="img/rottenbig.png" alt="Rotten" style="float: left"/>
                 <span>33%</span>
             </div>
             <div class="review">
                 <p class="review-body">
-                    <img src="rotten.gif" alt="Rotten"/>
+                    <img src="img/rotten.gif" alt="Rotten"/>
                     <q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the
                         movie
                         attempts to look polished and 'cool,' but the been-there animation can't compete with the
                         then-cutting-edge puppetry of the 1990 live-action movie.</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic">
+                    <img src="img/critic.gif" alt="Critic">
                     Peter Debruge <br/> Variety
                 </p>
             </div>
 
             <div class="review">
                 <p class="review-body">
-                    <img src="fresh.gif" alt="Fresh"/>
+                    <img src="img/fresh.gif" alt="Fresh"/>
                     <q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of
                         new
                         ones.</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic"/>
+                    <img src="img/critic.gif" alt="Critic"/>
                     Todd Gilchrist <br/>
                     IGN Movies
                 </p>
@@ -52,36 +52,36 @@
 
             <div class="review">
                 <p class="review-body">
-                    <img src="rotten.gif" alt="Rotten"/>
+                    <img src="img/rotten.gif" alt="Rotten"/>
                     <q>It stinks!</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic"/>
+                    <img src="img/critic.gif" alt="Critic"/>
                     Jay Sherman (unemployed)
                 </p>
             </div>
 
             <div class="review">
                 <p class="review-body">
-                    <img src="rotten.gif" alt="Rotten"/>
+                    <img src="img/rotten.gif" alt="Rotten"/>
                     <q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't
                         stopped them from becoming dull.</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic"/>
+                    <img src="img/critic.gif" alt="Critic"/>
                     Joshua Tyler <br/>CinemaBlend.com
                 </p>
             </div>
 
             <div class="review">
                 <p class="review-body">
-                    <img src="rotten.gif" alt="Rotten"/>
+                    <img src="img/rotten.gif" alt="Rotten"/>
                     <q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't
                         stopped
                         them from becoming dull.</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic"/>
+                    <img src="img/critic.gif" alt="Critic"/>
                     Joshua Tyler <br/>
                     CinemaBlend.com
                 </p>
@@ -89,11 +89,11 @@
 
             <div class="review">
                 <p class="review-body">
-                    <img src="rotten.gif" alt="Rotten"/>
+                    <img src="img/rotten.gif" alt="Rotten"/>
                     <q>YOUR REVIEW HERE</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic"/>
+                    <img src="img/critic.gif" alt="Critic"/>
                     NAME <br/>
                     PUBLICATION
                 </p>
@@ -101,7 +101,7 @@
 
             <div class="review">
                 <p class="review-body">
-                    <img src="rotten.gif" alt="Rotten"/>
+                    <img src="img/rotten.gif" alt="Rotten"/>
                     <q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their
                         countercultural
                         roots, our superheroes on the half shell have been firmly co-opted by the industry their
@@ -110,7 +110,7 @@
                         sought to spoof.</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic"/>
+                    <img src="img/critic.gif" alt="Critic"/>
                     Jeannette Catsoulis <br/>
                     New York Times
                 </p>
@@ -118,13 +118,13 @@
 
             <div class="review">
                 <p class="review-body">
-                    <img src="rotten.gif" alt="Rotten"/>
+                    <img src="img/rotten.gif" alt="Rotten"/>
                     <q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the
                         filmmakers
                         went along.</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic"/>
+                    <img src="img/critic.gif" alt="Critic"/>
                     Ed Gonzalez <br/>
                     Slant Magazine
                 </p>
@@ -132,13 +132,13 @@
 
             <div class="review">
                 <p class="review-body">
-                    <img src="fresh.gif" alt="Fresh"/>
+                    <img src="img/fresh.gif" alt="Fresh"/>
                     <q>The striking use of image and motion allows each sequence to leave an impression. It's an
                         accomplished
                         restart to this franchise.</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic"/>
+                    <img src="img/critic.gif" alt="Critic"/>
                     Mark Palermo <br/>
                     Coast (Halifax, Nova Scotia)
                 </p>
@@ -146,14 +146,14 @@
 
             <div class="review">
                 <p class="review-body">
-                    <img src="rotten.gif" alt="Rotten"/>
+                    <img src="img/rotten.gif" alt="Rotten"/>
                     <q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy
                         charm
                         of
                         the three live action films.</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic"/>
+                    <img src="img/critic.gif" alt="Critic"/>
                     Steve Rhodes <br/>
                     Internet Reviews
                 </p>
@@ -161,11 +161,11 @@
 
             <div class="review">
                 <p class="review-body">
-                    <img src="rotten.gif" alt="Rotten"/>
+                    <img src="img/rotten.gif" alt="Rotten"/>
                     <q>YOUR REVIEW HERE</q>
                 </p>
                 <p class="review-by">
-                    <img src="critic.gif" alt="Critic"/>
+                    <img src="img/critic.gif" alt="Critic"/>
                     NAME <br/>
                     PUBLICATION
                 </p>
@@ -173,7 +173,7 @@
         </div>
         <div class="sidebar">
             <div>
-                <img src="overview.png" alt="general overview"/>
+                <img src="img/overview.png" alt="general overview"/>
             </div>
             <dl>
                 <dt>STARRING</dt>
@@ -226,8 +226,8 @@
         <p class="pagination-info">(1-10) of 88</p>
     </div>
     <div class="validators">
-        <a href="http://validator.w3.org/check/referer"><img src="w3c-html.png" alt="Valid HTML5"/></a> <br/>
-        <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="Valid CSS"/></a>
+        <a href="http://validator.w3.org/check/referer"><img src="img/w3c-html.png" alt="Valid HTML5"/></a> <br/>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="img/w3c-css.png" alt="Valid CSS"/></a>
     </div>
 </div>
 </body>
