--- a/ascii.html
+++ b/ascii.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="ascii.css"/>
-    <script src="animations.js"></script>
-    <script src="ascii.js"></script>
+    <link rel="stylesheet" href="css/ascii.css"/>
+    <script src="js/animations.js"></script>
+    <script src="js/ascii.js"></script>
 </head>
 <body>
 
