--- a/decorate-text.html
+++ b/decorate-text.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 	<title>Text Decorator</title>
-	<link href="decoratemytext.css" type="text/css" rel="stylesheet"/>
+	<link href="css/decoratemytext.css" type="text/css" rel="stylesheet"/>
 
 
 	<!-- link to your script file here -->
-	<script src="decoratemytext.js"></script>
+	<script src="js/decoratemytext.js"></script>
 </head>
 
 <body id="body">
 <h1>Text Decorator</h1>
 <div>
-	<img src="decorated.gif" alt="very decorated!"/>
+	<img src="img/decorated.gif" alt="very decorated!"/>
 </div>
 
 <fieldset>
