--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 	<meta charset="utf-8"  />
 </head>  
   <body>
-    <img src="WhatsApp Image 2022-01-11 at 08.54.03.jpeg" width="200" height="200" alt="Ganesh Datt Joshi"/>
+    <img src="img/WhatsApp%20Image%202022-01-11%20at%2008.54.03.jpeg" width="200" height="200" alt="Ganesh Datt Joshi"/>
   
     <h2>Ganesh Datt Joshi</h2>
-    
     <ul>
       <li> W1D1 - This home page</li>
       <li> <a href="aboutme.html"> W1D2 - About Me</a></li>
       <li> <a href="pie.html">W1D3 - Receipe</a> </li>
-      <li><a href="review/tmnt.html"> W1D4 - Movie Review</a></li>
+      <li><a href="tmnt.html"> W1D4 - Movie Review</a></li>
       <li> W1D5 - MP3 Library</li>
       <li> W1D6 - Movie Review PHP</li>
     </ul>
@@ -24,10 +23,10 @@ href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/c
 
 <p>Assignment Wednesday</p>
 
-<a href="module-closure-lab/banking-account.html"> Bank Account</a>
-<a href="module-closure-lab/rudy-timer.html"> Rudy timer</a>
-<a href="javascript-scope-excersize/answer.txt"> Scope Answer</a>
-<a href="homework8/ascii.html"> ASCII</a>
+<a href="banking-account.html"> Bank Account</a><br/>
+<a href="rudy-timer.html"> Rudy timer</a><br/>
+<a href="javascript-scope-answer.txt"> Scope Answer</a><br/>
+<a href="ascii.html"> ASCII</a><br/>
 
   
 </html>
