--- a/pie.html
+++ b/pie.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="recipe.css">
+    <link rel="stylesheet" href="css/recipe.css">
     <link
     rel="icon"
     href="./images/pie_icon.gif"
