--- a/rudy-timer.html
+++ b/rudy-timer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="rudy-timer.js"></script>
+    <script src="js/rudy-timer.js"></script>
 </head>
 <body>
 
