--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Signup</title>
-    <link href="signup.css" rel="stylesheet">
+    <link href="css/signup.css" rel="stylesheet">
 </head>
 <body>
 
