--- a/tip-calculator.html
+++ b/tip-calculator.html
@@ -13,14 +13,14 @@
     </script>
 
     <title>Tip Calculator</title>
-    <link href="tip.css" type="text/css" rel="stylesheet">
+    <link href="css/tip-calculator.css" type="text/css" rel="stylesheet">
     <!-- <script src="tip.js" type="text/javascript"></script> -->
 </head>
 
 
 <body cz-shortcut-listen="true" data-new-gr-c-s-check-loaded="14.1044.0" data-gr-ext-installed="">
 <h1>
-    <img id="logo" src="calc.jpeg" alt="++--**//">
+    <img id="logo" src="images/calc.jpeg" alt="++--**//">
     Tip Calculator
 </h1>
 
