fix: refactor link

--- a/banking-account.html
+++ b/banking-account.html
@@ -25,7 +25,7 @@
     <div class="form-control">
         <textarea id="accountListInfo" rows="10" cols="90"></textarea>
     </div>
-
-
+<br/>
+<a href="js/rudy-timer.js">Ruby Timer</a>
 </body>
 </html>
