feat: add javascript module exercise

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@ href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/c
 <a href="javascript-scope-answer.txt"> Scope Answer</a><br/>
 <a href="ascii.html"> ASCII</a><br/>
 
+<p>Assignment Thursday</p>
+
+<a href="javascript-module-exercise.html"> ASCII</a><br/>
+
   
 </html>
