feat: add javascript module exercise

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/c
 
 <p>Assignment Thursday</p>
 
-<a href="javascript-module-exercise.html"> ASCII</a><br/>
+<a href="javascript-module-exercise.html"> Javascript Module exercise</a><br/>
 
   
 </html>
