feat: jquery assignment

--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@ href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/c
 
 <a href="javascript-module-exercise.html"> Javascript Module exercise</a><br/>
 
-  
+<p>Assignment Monday</p>
+<a href="jquery-quiz.html"> Jquery Quize Exersize</a><br/>
+<a href="mouse-maze.html">Mouse Maze</a><br/>
+
+
 </html>
