feat: jquery quiz2

--- a/index.html
+++ b/index.html
@@ -37,4 +37,7 @@ href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/c
 <a href="mouse-maze.html">Mouse Maze</a><br/>
 
 
+<p>Assignment Tuesday</p>
+<a href="jquery-quiz-2.html"> Jquery Quize Exersize</a><br/>
+
 </html>
