--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@ href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/c
 
 <p>Assignment Tuesday</p>
 <a href="jquery-quiz-2.html"> Jquery Quize Exersize</a><br/>
+<a href="fifteen.html"> Game</a><br/>
+
+<p>Assignment Wednesday</p>
+<a href="jquery-quiz-3.html"> Jquery Quize Exersize</a><br/>
 
 </html>
