--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@ href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/c
 
 <p>Assignment Wednesday</p>
 <a href="jquery-quiz-3.html"> Jquery Quize Exersize</a><br/>
+<a href="fifteen.html"> Fifteen Puzzle</a><br/>
 
 </html>
