fix: node.js exercise assignment

--- a/index.html
+++ b/index.html
@@ -45,4 +45,7 @@ href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/c
 <a href="jquery-quiz-3.html"> Jquery Quize Exersize</a><br/>
 <a href="fifteen.html"> Fifteen Puzzle</a><br/>
 
+<p>Assignment Thursday</p>
+<a href="exercise/assignment.txt"> N1,N2,N3,N4 Exercise</a><br/>
+
 </html>
