feat: friday assignment

--- a/index.html
+++ b/index.html
@@ -48,4 +48,7 @@ href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/c
 <p>Assignment Thursday</p>
 <a href="exercise/assignment.txt"> N1,N2,N3,N4 Exercise</a><br/>
 
+<p>Assignment Saturday</p>
+<a href="simple-calculator.txt"> Simple Calculator</a><br/>
+
 </html>
