--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <h2>Ganesh Datt Joshi</h2>
     <ul>
       <li> W1D1 - This home page</li>
-      <li> <a href="aboutme.html"> W1D2 - About Me</a></li>
-      <li> <a href="pie.html">W1D3 - Receipe</a> </li>
+      <li><a href="aboutme.html"> W1D2 - About Me</a></li>
+      <li><a href="pie.html">W1D3 - Receipe</a></li>
       <li><a href="tmnt.html"> W1D4 - Movie Review</a></li>
       <li> W1D5 - MP3 Library</li>
       <li> W1D6 - Movie Review PHP</li>
     </ul>
-  <a
-href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
+    <a
+            href="http://validator.w3.org/check/referer"> <img
+            src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
   </body>
+
+<a href="decorate-text.html">Text Decoration</a>
 
 <p>Assignment Wednesday</p>
 
