fix: number quiz lab

--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
 
 <p>Assignment Saturday</p>
 <a href="simple-calculator.txt"> Simple Calculator</a><br/>
-
+<p>Assignment Monday</p>
+<a href="number-quiz.txt"> Number Quiz Lab</a><br/>
 </html>
