feat: dictionary project

--- a/index.html
+++ b/index.html
@@ -56,3 +56,11 @@
 <p>Assignment Monday</p>
 <a href="number-quiz.txt"> Number Quiz Lab</a><br/>
 </html>
+
+<p>Dictionary Project</p>
+<a href="Dictionary.js"> Dictionary Page</a><br/>
+<a href="word.js"> Word Page</a><br/>
+<a href="public/dict.html"> Dict Html</a><br/>
+<a href="public/dict.css"> Dict CSS</a><br/>
+<a href="public/dict.js"> Dict JS</a><br/>
+</html>
