--- a/jquery-quiz.html
+++ b/jquery-quiz.html
@@ -9,7 +9,8 @@
 <h3>1. In jQuery terminology, what is the difference between the “jQuery function” and the “jQuery object”? </h3>
 <p>
     Ans:<br/>
-
+The "jQuery function" is the function that creates jQuery objects and registers handlers to be invoked when the DOM is ready.It is usually refered to as jQuery() or $().
+Whereas a "jQuery object" is an object returned by the jQuery function. It represents a set of document elements.
 </p>
 
 <h3>2. Write jQuery code to find all h1 elements that are children of a div element and make their background color
