--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </html>
 
 <p>Dictionary Project</p>
-<a href="dictinary-result.html">Quiz Link</a>
+<a href="dictinary-result.html">Dictionary Link</a>
 <a href="Dictionary.js"> Dictionary Page</a><br/>
 <a href="word.js"> Word Page</a><br/>
 <a href="public/dict.html"> Dict Html</a><br/>
